More added changes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Alex Shaw</h1>
+								<p>Games Developer and Lv4 Computer Games Development Student</p>
 							</div>
 						</div>
 						<nav>
@@ -47,28 +46,32 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hey! Im Alex Shaw. Im a current University Student at Staffordshire University on a Level 4 BSc Computer Games Development Course. <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum</p>
+								<p>Hey! Im Alex Shaw. Im a current University Student at Staffordshire University on a Level 4 BSc Computer Games Development Course. Check out my Work<a href="#work"> here</a>.</p>
+								<p>Im a Programmer and have experience in C++, C#, Javascript, HTML, CSS. i have used and created in Unreal engine and also Unity 2D and 3D. </p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Lorem ipsum</p>
-								<p>Lorem ipsum</p>
+								<h3>Marble Madness</h3>
+								<p>Use of Unity 3D engine to make a smiple prototype game</p>
+								<h3>2D Side Scroller game</h3>
+								<p>2D infinate side scroller game using Unity 2D </p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">About Myself</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum</p>
+								<p>Myself i have had a huge crave for gaming since i was younger. this slowly turned into a trend and games have been a big part of my history and slowly i have wanted to make games to allow people to have the same experience. I love a lot of game such as Burnout Revenge, Enter the Gungeon, Risk of Rain 2 and Battlefield Bad Company 2</p>
+								<p>I do also enjoy art i have experience in drawing and illustraiting pixel art and ive started to learn some Japanese manga art too. Sometimes art can have a big impact and so ive had this to allow myself to work well as a developer and have a few more areas with experience</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<p>Contact me with the following Social media links</p>
 								<!--<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
