--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<h3>Marble Madness</h3>
-								<p>Use of Unity 3D engine to make a smiple prototype game</p>
+								<p>Use of Unity 3D engine to make a smiple prototype game.</p>
 								<h3>2D Side Scroller game</h3>
-								<p>2D infinate side scroller game using Unity 2D </p>
+								<p>2D infinate side scroller game using Unity 2D.</p>
+								<h3>Pacman using S2D Library</h3>
+								<p>Making my own version of pacman using a custom library called S2D from Staffordshire University.</p>
 							</article>
 
 						<!-- About -->
