--- a/index.html
+++ b/index.html
@@ -54,12 +54,23 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<!-- Prototype Development -->
 								<h3>Marble Madness</h3>
 								<p>Use of Unity 3D engine to make a smiple prototype game.</p>
 								<h3>2D Side Scroller game</h3>
 								<p>2D infinate side scroller game using Unity 2D.</p>
+								<h3>2D platformer</h3>
+								<p>2D Platformer game that is made within Unity 2D</p>
+								<h3>Topdown shooter</h3>
+								<p>A top down shooter made within unity </p>
+								<!-- Foggs -->
 								<h3>Pacman using S2D Library</h3>
 								<p>Making my own version of pacman using a custom library called S2D from Staffordshire University.</p>
+								<h3>Graphical programming assignment</h3>
+								<p>Using openGL to program some graphics for an assignment</p>
+								<!-- GEC -->
+								<h3>SDL to make the original Mario bros</h3>
+								<p>Using the SDL game engine to code and make super mario bros</p>
 							</article>
 
 						<!-- About -->
