Changes and additions

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Hey! Im Alex Shaw. Im a current University Student at Staffordshire University on a Level 4 BSc Computer Games Development Course. Check out my Work<a href="#work"> here</a>.</p>
-								<p>Im a Programmer and have experience in C++, C#, Javascript, HTML, CSS. i have used and created in Unreal engine and also Unity 2D and 3D. </p>
+								<p>Im a Programmer and have experience in C++, C#, HTML, CSS. I Will be using Unreal engine and also Unity 2D and 3D to make games. </p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+
 								<!-- Prototype Development -->
 								<h3>Marble Madness</h3>
 								<p>Use of Unity 3D engine to make a smiple prototype game.</p>
@@ -61,16 +62,21 @@
 								<p>2D infinate side scroller game using Unity 2D.</p>
 								<h3>2D platformer</h3>
 								<p>2D Platformer game that is made within Unity 2D</p>
+								<span class="image main"><img src="images/2Dplatformer.gif" alt="" /></span>
 								<h3>Topdown shooter</h3>
 								<p>A top down shooter made within unity </p>
+
 								<!-- Foggs -->
 								<h3>Pacman using S2D Library</h3>
 								<p>Making my own version of pacman using a custom library called S2D from Staffordshire University.</p>
+								<span class="image main"><img src="images/pacman.png" alt="" /></span>
 								<h3>Graphical programming assignment</h3>
 								<p>Using openGL to program some graphics for an assignment</p>
+
 								<!-- GEC -->
 								<h3>SDL to make the original Mario bros</h3>
 								<p>Using the SDL game engine to code and make super mario bros</p>
+
 							</article>
 
 						<!-- About -->
@@ -78,7 +84,7 @@
 								<h2 class="major">About Myself</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Myself i have had a huge crave for gaming since i was younger. this slowly turned into a trend and games have been a big part of my history and slowly i have wanted to make games to allow people to have the same experience. I love a lot of game such as Burnout Revenge, Enter the Gungeon, Risk of Rain 2 and Battlefield Bad Company 2</p>
-								<p>I do also enjoy art i have experience in drawing and illustraiting pixel art and ive started to learn some Japanese manga art too. Sometimes art can have a big impact and so ive had this to allow myself to work well as a developer and have a few more areas with experience</p>
+								<p>I do also enjoy art i have experience in drawing and illustraiting pixel art. Sometimes art can have a big impact and so ive had this to allow myself to work well as a developer and have a few more areas with experience</p>
 							</article>
 
 						<!-- Contact -->
